Select co-planar faces fails #62595

Closed
opened 2019-03-15 00:11:59 +01:00 by Campbell Barton · 9 comments

With the attached blend file select co-planar faces, notice faces pointing in the opposite direction on a different plane are also selected.

coplanarfails.blend

With the attached blend file select co-planar faces, notice faces pointing in the opposite direction on a different plane are also selected. [coplanarfails.blend](https://archive.blender.org/developer/F6826321/coplanarfails.blend)
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

#61799 was marked as duplicate of this issue

#61799 was marked as duplicate of this issue
Dalai Felinto was assigned by Campbell Barton 2019-03-15 00:35:30 +01:00
Author
Owner

Checked the method this is using and not sure we can reliably encode a plane as v3 float into a kd-tree in a way that also keeps distance measurements valid.

This could be solved by a kd-tree that has an arbitrary number of dimensions and takes a custom distance callback when finding nearest since we want to compare the normal w/ a different epsilon to the distance.

Checked the method this is using and not sure we can reliably encode a plane as v3 float into a kd-tree in a way that also keeps distance measurements valid. This could be solved by a kd-tree that has an arbitrary number of dimensions and takes a custom distance callback when finding nearest since we want to compare the normal w/ a different epsilon to the distance.

Added subscriber: @HerbertPohlai

Added subscriber: @HerbertPohlai
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'll try to fix this.

I'll try to fix this.
Member

Hmm, I tried one other approach, but also does not seems to work.

I guess just having a 4D kdtree could fix this problem. Then the plane could be converted in Ax + By + Cz = D form and then normalized(A, B, C, D) can be stored in the kd tree.

Or we just use the trivial quadratic algorithm to find coplanar faces.

Hmm, I tried one other approach, but also does not seems to work. I guess just having a 4D kdtree could fix this problem. Then the plane could be converted in `Ax + By + Cz = D` form and then `normalized(A, B, C, D)` can be stored in the kd tree. Or we just use the trivial quadratic algorithm to find coplanar faces.

This issue was referenced by 3b9b324bf6

This issue was referenced by 3b9b324bf619a2c2d3cd8d25d5a0f95b7b0c476c
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62595
No description provided.