Fix T62595: Select co-planar faces fails